helloworld-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld-pod
  labels:
    app: helloworld-pod
    tier: backend
spec:
  containers:
  - name: api-server
    image: teddy1565/docker-demo
    ports:
    - containerPort: 3000
