my-pod-with-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: webserver
spec:
  containers:
  - name: demo-pod
    image: teddy1565/docker-demo
    ports:
    - containerPort: 3000
